--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d7f4356c",
    "metadata": {},
    "source": [
-    "# Data Science Tools and Ecosystem"
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4bbed95f",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
@@ -18,8 +25,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b44953d0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "**Objectives:**\n",
     "\n",
@@ -32,7 +40,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea8a8921",
    "metadata": {},
    "source": [
     "Some of the popular languages that Data Scientists use are:\n",
@@ -44,7 +51,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f10e3b6d",
    "metadata": {},
    "source": [
     "Some of the commonly used libraries used by Data Scientists include:\n",
@@ -56,8 +62,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a02b1194",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "<div style=\"margin-left: 0;\">\n",
     "    \n",
@@ -71,7 +78,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c35fce17",
    "metadata": {},
    "source": [
     "### Below are a few examples of evaluating arithmetic expressions in Python"
@@ -79,9 +85,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "91728e14",
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -89,7 +96,7 @@
        "17"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,9 +109,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "37840b91",
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -112,7 +120,7 @@
        "3.3333333333333335"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,19 +133,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "947a415e",
-   "metadata": {},
-   "source": [
-    "## Author\n",
-    "\n",
-    "Vivitha AnandaKrishnan"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5515ba17",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -145,9 +142,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,9 +156,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
